target/423/mongo.output
Terminals unused in grammar

   LIGNORE


State 66 conflicts: 1 shift/reduce
State 264 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: package imports xdcl_list

    2 package: %empty
    3        | LPACKAGE sym ';'

    4 imports: %empty
    5        | imports import ';'

    6 import: LIMPORT import_stmt
    7       | LIMPORT '(' import_stmt_list osemi ')'
    8       | LIMPORT '(' ')'

    9 import_stmt: import_here import_package import_there

   10 import_stmt_list: import_stmt
   11                 | import_stmt_list ';' import_stmt

   12 import_here: LLITERAL
   13            | sym LLITERAL
   14            | '.' LLITERAL

   15 import_package: LPACKAGE LNAME import_safety ';'

   16 import_safety: %empty
   17              | LNAME

   18 import_there: hidden_import_list '$' '$'

   19 xdcl: %empty
   20     | common_dcl
   21     | xfndcl
   22     | non_dcl_stmt
   23     | error

   24 common_dcl: LVAR vardcl
   25           | LVAR '(' vardcl_list osemi ')'
   26           | LVAR '(' ')'
   27           | lconst constdcl
   28           | lconst '(' constdcl osemi ')'
   29           | lconst '(' constdcl ';' constdcl_list osemi ')'
   30           | lconst '(' ')'
   31           | LTYPE typedcl
   32           | LTYPE '(' typedcl_list osemi ')'
   33           | LTYPE '(' ')'

   34 lconst: LCONST

   35 vardcl: dcl_name_list ntype
   36       | dcl_name_list ntype '=' expr_list
   37       | dcl_name_list '=' expr_list

   38 constdcl: dcl_name_list ntype '=' expr_list
   39         | dcl_name_list '=' expr_list

   40 constdcl1: constdcl
   41          | dcl_name_list ntype
   42          | dcl_name_list

   43 typedclname: sym

   44 typedcl: typedclname ntype

   45 simple_stmt: expr
   46            | expr LASOP expr
   47            | expr_list '=' expr_list
   48            | expr_list LCOLAS expr_list
   49            | expr LINC
   50            | expr LDEC

   51 case: LCASE expr_or_type_list ':'
   52     | LCASE expr_or_type_list '=' expr ':'
   53     | LCASE expr_or_type_list LCOLAS expr ':'
   54     | LDEFAULT ':'

   55 compound_stmt: '{' stmt_list '}'

   56 $@1: %empty

   57 caseblock: case $@1 stmt_list

   58 caseblock_list: %empty
   59               | caseblock_list caseblock

   60 loop_body: '{' stmt_list '}'

   61 range_stmt: expr_list '=' LRANGE expr
   62           | expr_list LCOLAS LRANGE expr

   63 for_header: osimple_stmt ';' osimple_stmt ';' osimple_stmt
   64           | osimple_stmt
   65           | range_stmt

   66 for_body: for_header loop_body

   67 for_stmt: LFOR for_body

   68 if_header: osimple_stmt
   69          | osimple_stmt ';' osimple_stmt

   70 if_stmt: LIF if_header loop_body elseif_list else

   71 elseif: LELSE LIF if_header loop_body

   72 elseif_list: %empty
   73            | elseif_list elseif

   74 else: %empty
   75     | LELSE compound_stmt

   76 switch_stmt: LSWITCH if_header '{' caseblock_list '}'

   77 select_stmt: LSELECT '{' caseblock_list '}'

   78 expr: uexpr
   79     | expr LOROR expr
   80     | expr LANDAND expr
   81     | expr LEQ expr
   82     | expr LNE expr
   83     | expr LLT expr
   84     | expr LLE expr
   85     | expr LGE expr
   86     | expr LGT expr
   87     | expr '+' expr
   88     | expr '-' expr
   89     | expr '|' expr
   90     | expr '^' expr
   91     | expr '*' expr
   92     | expr '/' expr
   93     | expr '%' expr
   94     | expr '&' expr
   95     | expr LANDNOT expr
   96     | expr LLSH expr
   97     | expr LRSH expr
   98     | expr LCOMM expr

   99 uexpr: pexpr
  100      | '*' uexpr
  101      | '&' uexpr
  102      | '+' uexpr
  103      | '-' uexpr
  104      | '!' uexpr
  105      | '~' uexpr
  106      | '^' uexpr
  107      | LCOMM uexpr

  108 pseudocall: pexpr '(' ')'
  109           | pexpr '(' expr_or_type_list ocomma ')'
  110           | pexpr '(' expr_or_type_list LDDD ocomma ')'

  111 pexpr_no_paren: LLITERAL
  112               | name
  113               | pexpr '.' sym
  114               | pexpr '.' '(' expr_or_type ')'
  115               | pexpr '.' '(' LTYPE ')'
  116               | pexpr '[' expr ']'
  117               | pexpr '[' oexpr ':' oexpr ']'
  118               | pexpr '[' oexpr ':' oexpr ':' oexpr ']'
  119               | pseudocall
  120               | convtype '(' expr ocomma ')'
  121               | comptype lbrace start_complit braced_keyval_list '}'
  122               | pexpr_no_paren '{' start_complit braced_keyval_list '}'
  123               | '(' expr_or_type ')' '{' start_complit braced_keyval_list '}'
  124               | fnliteral

  125 start_complit: %empty

  126 keyval: expr ':' complitexpr

  127 bare_complitexpr: expr
  128                 | '{' start_complit braced_keyval_list '}'

  129 complitexpr: expr
  130            | '{' start_complit braced_keyval_list '}'

  131 pexpr: pexpr_no_paren
  132      | '(' expr_or_type ')'

  133 expr_or_type: expr
  134             | non_expr_type

  135 name_or_type: ntype

  136 lbrace: '{'

  137 new_name: sym

  138 dcl_name: sym

  139 onew_name: %empty
  140          | new_name

  141 sym: LNAME
  142    | hidden_importsym
  143    | '?'

  144 hidden_importsym: '@' LLITERAL '.' LNAME
  145                 | '@' LLITERAL '.' '?'

  146 name: sym

  147 labelname: new_name

  148 dotdotdot: LDDD
  149          | LDDD ntype

  150 ntype: recvchantype
  151      | fntype
  152      | othertype
  153      | ptrtype
  154      | dotname
  155      | '(' ntype ')'

  156 non_expr_type: recvchantype
  157              | fntype
  158              | othertype
  159              | '*' non_expr_type

  160 non_recvchantype: fntype
  161                 | othertype
  162                 | ptrtype
  163                 | dotname
  164                 | '(' ntype ')'

  165 convtype: fntype
  166         | othertype

  167 comptype: othertype

  168 fnret_type: recvchantype
  169           | fntype
  170           | othertype
  171           | ptrtype
  172           | dotname

  173 dotname: name
  174        | name '.' sym

  175 othertype: '[' oexpr ']' ntype
  176          | '[' LDDD ']' ntype
  177          | LCHAN non_recvchantype
  178          | LCHAN LCOMM ntype
  179          | LMAP '[' ntype ']' ntype
  180          | structtype
  181          | interfacetype

  182 ptrtype: '*' ntype

  183 recvchantype: LCOMM LCHAN ntype

  184 structtype: LSTRUCT lbrace structdcl_list osemi '}'
  185           | LSTRUCT lbrace '}'

  186 interfacetype: LINTERFACE lbrace interfacedcl_list osemi '}'
  187              | LINTERFACE lbrace '}'

  188 xfndcl: LFUNC fndcl fnbody

  189 fndcl: sym '(' oarg_type_list_ocomma ')' fnres
  190      | '(' oarg_type_list_ocomma ')' sym '(' oarg_type_list_ocomma ')' fnres

  191 hidden_fndcl: hidden_pkg_importsym '(' ohidden_funarg_list ')' ohidden_funres
  192             | '(' hidden_funarg_list ')' sym '(' ohidden_funarg_list ')' ohidden_funres

  193 fntype: LFUNC '(' oarg_type_list_ocomma ')' fnres

  194 fnbody: %empty
  195       | '{' stmt_list '}'

  196 fnres: %empty
  197      | fnret_type
  198      | '(' oarg_type_list_ocomma ')'

  199 fnlitdcl: fntype

  200 fnliteral: fnlitdcl lbrace stmt_list '}'
  201          | fnlitdcl error

  202 xdcl_list: %empty
  203          | xdcl_list xdcl ';'

  204 vardcl_list: vardcl
  205            | vardcl_list ';' vardcl

  206 constdcl_list: constdcl1
  207              | constdcl_list ';' constdcl1

  208 typedcl_list: typedcl
  209             | typedcl_list ';' typedcl

  210 structdcl_list: structdcl
  211               | structdcl_list ';' structdcl

  212 interfacedcl_list: interfacedcl
  213                  | interfacedcl_list ';' interfacedcl

  214 structdcl: new_name_list ntype oliteral
  215          | embed oliteral
  216          | '(' embed ')' oliteral
  217          | '*' embed oliteral
  218          | '(' '*' embed ')' oliteral
  219          | '*' '(' embed ')' oliteral

  220 packname: LNAME
  221         | LNAME '.' sym

  222 embed: packname

  223 interfacedcl: new_name indcl
  224             | packname
  225             | '(' packname ')'

  226 indcl: '(' oarg_type_list_ocomma ')' fnres

  227 arg_type: name_or_type
  228         | sym name_or_type
  229         | sym dotdotdot
  230         | dotdotdot

  231 arg_type_list: arg_type
  232              | arg_type_list ',' arg_type

  233 oarg_type_list_ocomma: %empty
  234                      | arg_type_list ocomma

  235 stmt: %empty
  236     | compound_stmt
  237     | common_dcl
  238     | non_dcl_stmt
  239     | error

  240 non_dcl_stmt: simple_stmt
  241             | for_stmt
  242             | switch_stmt
  243             | select_stmt
  244             | if_stmt
  245             | labelname ':' stmt
  246             | LFALL
  247             | LBREAK onew_name
  248             | LCONTINUE onew_name
  249             | LGO pseudocall
  250             | LDEFER pseudocall
  251             | LGOTO new_name
  252             | LRETURN oexpr_list

  253 stmt_list: stmt
  254          | stmt_list ';' stmt

  255 new_name_list: new_name
  256              | new_name_list ',' new_name

  257 dcl_name_list: dcl_name
  258              | dcl_name_list ',' dcl_name

  259 expr_list: expr
  260          | expr_list ',' expr

  261 expr_or_type_list: expr_or_type
  262                  | expr_or_type_list ',' expr_or_type

  263 keyval_list: keyval
  264            | bare_complitexpr
  265            | keyval_list ',' keyval
  266            | keyval_list ',' bare_complitexpr

  267 braced_keyval_list: %empty
  268                   | keyval_list ocomma

  269 osemi: %empty
  270      | ';'

  271 ocomma: %empty
  272       | ','

  273 oexpr: %empty
  274      | expr

  275 oexpr_list: %empty
  276           | expr_list

  277 osimple_stmt: %empty
  278             | simple_stmt

  279 ohidden_funarg_list: %empty
  280                    | hidden_funarg_list

  281 ohidden_structdcl_list: %empty
  282                       | hidden_structdcl_list

  283 ohidden_interfacedcl_list: %empty
  284                          | hidden_interfacedcl_list

  285 oliteral: %empty
  286         | LLITERAL

  287 hidden_import: LIMPORT LNAME LLITERAL ';'
  288              | LVAR hidden_pkg_importsym hidden_type ';'
  289              | LCONST hidden_pkg_importsym '=' hidden_constant ';'
  290              | LCONST hidden_pkg_importsym hidden_type '=' hidden_constant ';'
  291              | LTYPE hidden_pkgtype hidden_type ';'
  292              | LFUNC hidden_fndcl fnbody ';'

  293 hidden_pkg_importsym: hidden_importsym

  294 hidden_pkgtype: hidden_pkg_importsym

  295 hidden_type: hidden_type_misc
  296            | hidden_type_recv_chan
  297            | hidden_type_func

  298 hidden_type_non_recv_chan: hidden_type_misc
  299                          | hidden_type_func

  300 hidden_type_misc: hidden_importsym
  301                 | LNAME
  302                 | '[' ']' hidden_type
  303                 | '[' LLITERAL ']' hidden_type
  304                 | LMAP '[' hidden_type ']' hidden_type
  305                 | LSTRUCT '{' ohidden_structdcl_list '}'
  306                 | LINTERFACE '{' ohidden_interfacedcl_list '}'
  307                 | '*' hidden_type
  308                 | LCHAN hidden_type_non_recv_chan
  309                 | LCHAN '(' hidden_type_recv_chan ')'
  310                 | LCHAN LCOMM hidden_type

  311 hidden_type_recv_chan: LCOMM LCHAN hidden_type

  312 hidden_type_func: LFUNC '(' ohidden_funarg_list ')' ohidden_funres

  313 hidden_funarg: sym hidden_type oliteral
  314              | sym LDDD hidden_type oliteral

  315 hidden_structdcl: sym hidden_type oliteral

  316 hidden_interfacedcl: sym '(' ohidden_funarg_list ')' ohidden_funres
  317                    | hidden_type

  318 ohidden_funres: %empty
  319               | hidden_funres

  320 hidden_funres: '(' ohidden_funarg_list ')'
  321              | hidden_type

  322 hidden_literal: LLITERAL
  323               | '-' LLITERAL
  324               | sym

  325 hidden_constant: hidden_literal
  326                | '(' hidden_literal '+' hidden_literal ')'

  327 hidden_import_list: %empty
  328                   | hidden_import_list hidden_import

  329 hidden_funarg_list: hidden_funarg
  330                   | hidden_funarg_list ',' hidden_funarg

  331 hidden_structdcl_list: hidden_structdcl
  332                      | hidden_structdcl_list ';' hidden_structdcl

  333 hidden_interfacedcl_list: hidden_interfacedcl
  334                         | hidden_interfacedcl_list ';' hidden_interfacedcl


Terminals, with rules where they appear

$end (0) 0
'!' (33) 104
'$' (36) 18
'%' (37) 93
'&' (38) 94 101
'(' (40) 7 8 25 26 28 29 30 32 33 108 109 110 114 115 120 123 132 155
    164 189 190 191 192 193 198 216 218 219 225 226 309 312 316 320
    326
')' (41) 7 8 25 26 28 29 30 32 33 108 109 110 114 115 120 123 132 155
    164 189 190 191 192 193 198 216 218 219 225 226 309 312 316 320
    326
'*' (42) 91 100 159 182 217 218 219 307
'+' (43) 87 102 326
',' (44) 232 256 258 260 262 265 266 272 330
'-' (45) 88 103 323
'.' (46) 14 113 114 115 144 145 174 221
'/' (47) 92
':' (58) 51 52 53 54 117 118 126 245
';' (59) 3 5 11 15 29 63 69 203 205 207 209 211 213 254 270 287 288
    289 290 291 292 332 334
'=' (61) 36 37 38 39 47 52 61 289 290
'?' (63) 143 145
'@' (64) 144 145
'[' (91) 116 117 118 175 176 179 302 303 304
']' (93) 116 117 118 175 176 179 302 303 304
'^' (94) 90 106
'{' (123) 55 60 76 77 122 123 128 130 136 195 305 306
'|' (124) 89
'}' (125) 55 60 76 77 121 122 123 128 130 184 185 186 187 195 200 305
    306
'~' (126) 105
error (256) 23 201 239
LLITERAL (258) 12 13 14 111 144 145 286 287 303 322 323
LASOP (259) 46
LCOLAS (260) 48 53 62
LBREAK (261) 247
LCASE (262) 51 52 53
LCHAN (263) 177 178 183 308 309 310 311
LCONST (264) 34 289 290
LCONTINUE (265) 248
LDDD (266) 110 148 149 176 314
LDEFAULT (267) 54
LDEFER (268) 250
LELSE (269) 71 75
LFALL (270) 246
LFOR (271) 67
LFUNC (272) 188 193 292 312
LGO (273) 249
LGOTO (274) 251
LIF (275) 70 71
LIMPORT (276) 6 7 8 287
LINTERFACE (277) 186 187 306
LMAP (278) 179 304
LNAME (279) 15 17 141 144 220 221 287 301
LPACKAGE (280) 3 15
LRANGE (281) 61 62
LRETURN (282) 252
LSELECT (283) 77
LSTRUCT (284) 184 185 305
LSWITCH (285) 76
LTYPE (286) 31 32 33 115 291
LVAR (287) 24 25 26 288
LANDAND (288) 80
LANDNOT (289) 95
LCOMM (290) 98 107 178 183 310 311
LDEC (291) 50
LEQ (292) 81
LGE (293) 85
LGT (294) 86
LIGNORE (295)
LINC (296) 49
LLE (297) 84
LLSH (298) 96
LLT (299) 83
LNE (300) 82
LOROR (301) 79
LRSH (302) 97
NotPackage (303)
NotParen (304)
PreferToRightParen (305)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
file (76)
    on left: 1, on right: 0
package (77)
    on left: 2 3, on right: 1
imports (78)
    on left: 4 5, on right: 1 5
import (79)
    on left: 6 7 8, on right: 5
import_stmt (80)
    on left: 9, on right: 6 10 11
import_stmt_list (81)
    on left: 10 11, on right: 7 11
import_here (82)
    on left: 12 13 14, on right: 9
import_package (83)
    on left: 15, on right: 9
import_safety (84)
    on left: 16 17, on right: 15
import_there (85)
    on left: 18, on right: 9
xdcl (86)
    on left: 19 20 21 22 23, on right: 203
common_dcl (87)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 20 237
lconst (88)
    on left: 34, on right: 27 28 29 30
vardcl (89)
    on left: 35 36 37, on right: 24 204 205
constdcl (90)
    on left: 38 39, on right: 27 28 29 40
constdcl1 (91)
    on left: 40 41 42, on right: 206 207
typedclname (92)
    on left: 43, on right: 44
typedcl (93)
    on left: 44, on right: 31 208 209
simple_stmt (94)
    on left: 45 46 47 48 49 50, on right: 240 278
case (95)
    on left: 51 52 53 54, on right: 57
compound_stmt (96)
    on left: 55, on right: 75 236
caseblock (97)
    on left: 57, on right: 59
$@1 (98)
    on left: 56, on right: 57
caseblock_list (99)
    on left: 58 59, on right: 59 76 77
loop_body (100)
    on left: 60, on right: 66 70 71
range_stmt (101)
    on left: 61 62, on right: 65
for_header (102)
    on left: 63 64 65, on right: 66
for_body (103)
    on left: 66, on right: 67
for_stmt (104)
    on left: 67, on right: 241
if_header (105)
    on left: 68 69, on right: 70 71 76
if_stmt (106)
    on left: 70, on right: 244
elseif (107)
    on left: 71, on right: 73
elseif_list (108)
    on left: 72 73, on right: 70 73
else (109)
    on left: 74 75, on right: 70
switch_stmt (110)
    on left: 76, on right: 242
select_stmt (111)
    on left: 77, on right: 243
expr (112)
    on left: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98, on right: 45 46 49 50 52 53 61 62 79 80 81 82 83 84 85
    86 87 88 89 90 91 92 93 94 95 96 97 98 116 120 126 127 129 133
    259 260 274
uexpr (113)
    on left: 99 100 101 102 103 104 105 106 107, on right: 78 100 101
    102 103 104 105 106 107
pseudocall (114)
    on left: 108 109 110, on right: 119 249 250
pexpr_no_paren (115)
    on left: 111 112 113 114 115 116 117 118 119 120 121 122 123 124,
    on right: 122 131
start_complit (116)
    on left: 125, on right: 121 122 123 128 130
keyval (117)
    on left: 126, on right: 263 265
bare_complitexpr (118)
    on left: 127 128, on right: 264 266
complitexpr (119)
    on left: 129 130, on right: 126
pexpr (120)
    on left: 131 132, on right: 99 108 109 110 113 114 115 116 117
    118
expr_or_type (121)
    on left: 133 134, on right: 114 123 132 261 262
name_or_type (122)
    on left: 135, on right: 227 228
lbrace (123)
    on left: 136, on right: 121 184 185 186 187 200
new_name (124)
    on left: 137, on right: 140 147 223 251 255 256
dcl_name (125)
    on left: 138, on right: 257 258
onew_name (126)
    on left: 139 140, on right: 247 248
sym (127)
    on left: 141 142 143, on right: 3 13 43 113 137 138 146 174 189
    190 192 221 228 229 313 314 315 316 324
hidden_importsym (128)
    on left: 144 145, on right: 142 293 300
name (129)
    on left: 146, on right: 112 173 174
labelname (130)
    on left: 147, on right: 245
dotdotdot (131)
    on left: 148 149, on right: 229 230
ntype (132)
    on left: 150 151 152 153 154 155, on right: 35 36 38 41 44 135
    149 155 164 175 176 178 179 182 183 214
non_expr_type (133)
    on left: 156 157 158 159, on right: 134 159
non_recvchantype (134)
    on left: 160 161 162 163 164, on right: 177
convtype (135)
    on left: 165 166, on right: 120
comptype (136)
    on left: 167, on right: 121
fnret_type (137)
    on left: 168 169 170 171 172, on right: 197
dotname (138)
    on left: 173 174, on right: 154 163 172
othertype (139)
    on left: 175 176 177 178 179 180 181, on right: 152 158 161 166
    167 170
ptrtype (140)
    on left: 182, on right: 153 162 171
recvchantype (141)
    on left: 183, on right: 150 156 168
structtype (142)
    on left: 184 185, on right: 180
interfacetype (143)
    on left: 186 187, on right: 181
xfndcl (144)
    on left: 188, on right: 21
fndcl (145)
    on left: 189 190, on right: 188
hidden_fndcl (146)
    on left: 191 192, on right: 292
fntype (147)
    on left: 193, on right: 151 157 160 165 169 199
fnbody (148)
    on left: 194 195, on right: 188 292
fnres (149)
    on left: 196 197 198, on right: 189 190 193 226
fnlitdcl (150)
    on left: 199, on right: 200 201
fnliteral (151)
    on left: 200 201, on right: 124
xdcl_list (152)
    on left: 202 203, on right: 1 203
vardcl_list (153)
    on left: 204 205, on right: 25 205
constdcl_list (154)
    on left: 206 207, on right: 29 207
typedcl_list (155)
    on left: 208 209, on right: 32 209
structdcl_list (156)
    on left: 210 211, on right: 184 211
interfacedcl_list (157)
    on left: 212 213, on right: 186 213
structdcl (158)
    on left: 214 215 216 217 218 219, on right: 210 211
packname (159)
    on left: 220 221, on right: 222 224 225
embed (160)
    on left: 222, on right: 215 216 217 218 219
interfacedcl (161)
    on left: 223 224 225, on right: 212 213
indcl (162)
    on left: 226, on right: 223
arg_type (163)
    on left: 227 228 229 230, on right: 231 232
arg_type_list (164)
    on left: 231 232, on right: 232 234
oarg_type_list_ocomma (165)
    on left: 233 234, on right: 189 190 193 198 226
stmt (166)
    on left: 235 236 237 238 239, on right: 245 253 254
non_dcl_stmt (167)
    on left: 240 241 242 243 244 245 246 247 248 249 250 251 252, on right:
    22 238
stmt_list (168)
    on left: 253 254, on right: 55 57 60 195 200 254
new_name_list (169)
    on left: 255 256, on right: 214 256
dcl_name_list (170)
    on left: 257 258, on right: 35 36 37 38 39 41 42 258
expr_list (171)
    on left: 259 260, on right: 36 37 38 39 47 48 61 62 260 276
expr_or_type_list (172)
    on left: 261 262, on right: 51 52 53 109 110 262
keyval_list (173)
    on left: 263 264 265 266, on right: 265 266 268
braced_keyval_list (174)
    on left: 267 268, on right: 121 122 123 128 130
osemi (175)
    on left: 269 270, on right: 7 25 28 29 32 184 186
ocomma (176)
    on left: 271 272, on right: 109 110 120 234 268
oexpr (177)
    on left: 273 274, on right: 117 118 175
oexpr_list (178)
    on left: 275 276, on right: 252
osimple_stmt (179)
    on left: 277 278, on right: 63 64 68 69
ohidden_funarg_list (180)
    on left: 279 280, on right: 191 192 312 316 320
ohidden_structdcl_list (181)
    on left: 281 282, on right: 305
ohidden_interfacedcl_list (182)
    on left: 283 284, on right: 306
oliteral (183)
    on left: 285 286, on right: 214 215 216 217 218 219 313 314 315
hidden_import (184)
    on left: 287 288 289 290 291 292, on right: 328
hidden_pkg_importsym (185)
    on left: 293, on right: 191 288 289 290 294
hidden_pkgtype (186)
    on left: 294, on right: 291
hidden_type (187)
    on left: 295 296 297, on right: 288 290 291 302 303 304 307 310
    311 313 314 315 317 321
hidden_type_non_recv_chan (188)
    on left: 298 299, on right: 308
hidden_type_misc (189)
    on left: 300 301 302 303 304 305 306 307 308 309 310, on right:
    295 298
hidden_type_recv_chan (190)
    on left: 311, on right: 296 309
hidden_type_func (191)
    on left: 312, on right: 297 299
hidden_funarg (192)
    on left: 313 314, on right: 329 330
hidden_structdcl (193)
    on left: 315, on right: 331 332
hidden_interfacedcl (194)
    on left: 316 317, on right: 333 334
ohidden_funres (195)
    on left: 318 319, on right: 191 192 312 316
hidden_funres (196)
    on left: 320 321, on right: 319
hidden_literal (197)
    on left: 322 323 324, on right: 325 326
hidden_constant (198)
    on left: 325 326, on right: 289 290
hidden_import_list (199)
    on left: 327 328, on right: 18 328
hidden_funarg_list (200)
    on left: 329 330, on right: 192 280 330
hidden_structdcl_list (201)
    on left: 331 332, on right: 282 332
hidden_interfacedcl_list (202)
    on left: 333 334, on right: 284 334


State 0

    0 $accept: . file $end

    LPACKAGE  shift, and go to state 1

    $default  reduce using rule 2 (package)

    file     go to state 2
    package  go to state 3


State 1

    3 package: LPACKAGE . sym ';'

    LNAME  shift, and go to state 4
    '?'    shift, and go to state 5
    '@'    shift, and go to state 6

    sym               go to state 7
    hidden_importsym  go to state 8


State 2

    0 $accept: file . $end

    $end  shift, and go to state 9


State 3

    1 file: package . imports xdcl_list

    $default  reduce using rule 4 (imports)

    imports  go to state 10


State 4

  141 sym: LNAME .

    $default  reduce using rule 141 (sym)


State 5

  143 sym: '?' .

    $default  reduce using rule 143 (sym)


State 6

  144 hidden_importsym: '@' . LLITERAL '.' LNAME
  145                 | '@' . LLITERAL '.' '?'

    LLITERAL  shift, and go to state 11


State 7

    3 package: LPACKAGE sym . ';'

    ';'  shift, and go to state 12


State 8

  142 sym: hidden_importsym .

    $default  reduce using rule 142 (sym)


State 9

    0 $accept: file $end .

    $default  accept


State 10

    1 file: package imports . xdcl_list
    5 imports: imports . import ';'

    LIMPORT  shift, and go to state 13

    $default  reduce using rule 202 (xdcl_list)

    import     go to state 14
    xdcl_list  go to state 15


State 11

  144 hidden_importsym: '@' LLITERAL . '.' LNAME
  145                 | '@' LLITERAL . '.' '?'

    '.'  shift, and go to state 16


State 12

    3 package: LPACKAGE sym ';' .

    $default  reduce using rule 3 (package)


State 13

    6 import: LIMPORT . import_stmt
    7       | LIMPORT . '(' import_stmt_list osemi ')'
    8       | LIMPORT . '(' ')'

    LLITERAL  shift, and go to state 17
    LNAME     shift, and go to state 4
    '('       shift, and go to state 18
    '.'       shift, and go to state 19
    '?'       shift, and go to state 5
    '@'       shift, and go to state 6

    import_stmt       go to state 20
    import_here       go to state 21
    sym               go to state 22
    hidden_importsym  go to state 8


State 14

    5 imports: imports import . ';'

    ';'  shift, and go to state 23


State 15

    1 file: package imports xdcl_list .
  203 xdcl_list: xdcl_list . xdcl ';'

    error       shift, and go to state 24
    LLITERAL    shift, and go to state 25
    LBREAK      shift, and go to state 26
    LCHAN       shift, and go to state 27
    LCONST      shift, and go to state 28
    LCONTINUE   shift, and go to state 29
    LDEFER      shift, and go to state 30
    LFALL       shift, and go to state 31
    LFOR        shift, and go to state 32
    LFUNC       shift, and go to state 33
    LGO         shift, and go to state 34
    LGOTO       shift, and go to state 35
    LIF         shift, and go to state 36
    LINTERFACE  shift, and go to state 37
    LMAP        shift, and go to state 38
    LNAME       shift, and go to state 4
    LRETURN     shift, and go to state 39
    LSELECT     shift, and go to state 40
    LSTRUCT     shift, and go to state 41
    LSWITCH     shift, and go to state 42
    LTYPE       shift, and go to state 43
    LVAR        shift, and go to state 44
    LCOMM       shift, and go to state 45
    '+'         shift, and go to state 46
    '-'         shift, and go to state 47
    '^'         shift, and go to state 48
    '*'         shift, and go to state 49
    '&'         shift, and go to state 50
    '('         shift, and go to state 51
    '!'         shift, and go to state 52
    '~'         shift, and go to state 53
    '['         shift, and go to state 54
    '?'         shift, and go to state 5
    '@'         shift, and go to state 6

    $end  reduce using rule 1 (file)
    ';'   reduce using rule 19 (xdcl)

    xdcl              go to state 55
    common_dcl        go to state 56
    lconst            go to state 57
    simple_stmt       go to state 58
    for_stmt          go to state 59
    if_stmt           go to state 60
    switch_stmt       go to state 61
    select_stmt       go to state 62
    expr              go to state 63
    uexpr             go to state 64
    pseudocall        go to state 65
    pexpr_no_paren    go to state 66
    pexpr             go to state 67
    new_name          go to state 68
    sym               go to state 69
    hidden_importsym  go to state 8
    name              go to state 70
    labelname         go to state 71
    convtype          go to state 72
    comptype          go to state 73
    othertype         go to state 74
    structtype        go to state 75
    interfacetype     go to state 76
    xfndcl            go to state 77
    fntype            go to state 78
    fnlitdcl          go to state 79
    fnliteral         go to state 80
    non_dcl_stmt      go to state 81
    expr_list         go to state 82


State 16

  144 hidden_importsym: '@' LLITERAL '.' . LNAME
  145                 | '@' LLITERAL '.' . '?'

    LNAME  shift, and go to state 83
    '?'    shift, and go to state 84


State 17

   12 import_here: LLITERAL .

    $default  reduce using rule 12 (import_here)


State 18

    7 import: LIMPORT '(' . import_stmt_list osemi ')'
    8       | LIMPORT '(' . ')'

    LLITERAL  shift, and go to state 17
    LNAME     shift, and go to state 4
    ')'       shift, and go to state 85
    '.'       shift, and go to state 19
    '?'       shift, and go to state 5
    '@'       shift, and go to state 6

    import_stmt       go to state 86
    import_stmt_list  go to state 87
    import_here       go to state 21
    sym               go to state 22
    hidden_importsym  go to state 8


State 19

   14 import_here: '.' . LLITERAL

    LLITERAL  shift, and go to state 88


State 20

    6 import: LIMPORT import_stmt .

    $default  reduce using rule 6 (import)


State 21

    9 import_stmt: import_here . import_package import_there

    LPACKAGE  shift, and go to state 89

    import_package  go to state 90


State 22

   13 import_here: sym . LLITERAL

    LLITERAL  shift, and go to state 91


State 23

    5 imports: imports import ';' .

    $default  reduce using rule 5 (imports)


State 24

   23 xdcl: error .

    $default  reduce using rule 23 (xdcl)


State 25

  111 pexpr_no_paren: LLITERAL .

    $default  reduce using rule 111 (pexpr_no_paren)


State 26

  247 non_dcl_stmt: LBREAK . onew_name

    LNAME  shift, and go to state 4
    '?'    shift, and go to state 5
    '@'    shift, and go to state 6

    $default  reduce using rule 139 (onew_name)

    new_name          go to state 92
    onew_name         go to state 93
    sym               go to state 94
    hidden_importsym  go to state 8


State 27

  177 othertype: LCHAN . non_recvchantype
  178          | LCHAN . LCOMM ntype

    LCHAN       shift, and go to state 27
    LFUNC       shift, and go to state 95
    LINTERFACE  shift, and go to state 37
    LMAP        shift, and go to state 38
    LNAME       shift, and go to state 4
    LSTRUCT     shift, and go to state 41
    LCOMM       shift, and go to state 96
    '*'         shift, and go to state 97
    '('         shift, and go to state 98
    '['         shift, and go to state 54
    '?'         shift, and go to state 5
    '@'         shift, and go to state 6

    sym               go to state 99
    hidden_importsym  go to state 8
    name              go to state 100
    non_recvchantype  go to state 101
    dotname           go to state 102
    othertype         go to state 103
    ptrtype           go to state 104
    structtype        go to state 75
    interfacetype     go to state 76
    fntype            go to state 105


State 28

   34 lconst: LCONST .

    $default  reduce using rule 34 (lconst)


State 29

  248 non_dcl_stmt: LCONTINUE . onew_name

    LNAME  shift, and go to state 4
    '?'    shift, and go to state 5
    '@'    shift, and go to state 6

    $default  reduce using rule 139 (onew_name)

    new_name          go to state 92
    onew_name         go to state 106
    sym               go to state 94
    hidden_importsym  go to state 8


State 30

  250 non_dcl_stmt: LDEFER . pseudocall

    LLITERAL    shift, and go to state 25
    LCHAN       shift, and go to state 27
    LFUNC       shift, and go to state 95
    LINTERFACE  shift, and go to state 37
    LMAP        shift, and go to state 38
    LNAME       shift, and go to state 4
    LSTRUCT     shift, and go to state 41
    '('         shift, and go to state 51
    '['         shift, and go to state 54
    '?'         shift, and go to state 5
    '@'         shift, and go to state 6

    pseudocall        go to state 107
    pexpr_no_paren    go to state 66
    pexpr             go to state 108
    sym               go to state 99
    hidden_importsym  go to state 8
    name              go to state 70
    convtype          go to state 72
    comptype          go to state 73
    othertype         go to state 74
    structtype        go to state 75
    interfacetype     go to state 76
    fntype            go to state 78
    fnlitdcl          go to state 79
    fnliteral         go to state 80


State 31

  246 non_dcl_stmt: LFALL .

    $default  reduce using rule 246 (non_dcl_stmt)


State 32

   67 for_stmt: LFOR . for_body

    LLITERAL    shift, and go to state 25
    LCHAN       shift, and go to state 27
    LFUNC       shift, and go to state 95
    LINTERFACE  shift, and go to state 37
    LMAP        shift, and go to state 38
    LNAME       shift, and go to state 4
    LSTRUCT     shift, and go to state 41
    LCOMM       shift, and go to state 45
    '+'         shift, and go to state 46
    '-'         shift, and go to state 47
    '^'         shift, and go to state 48
    '*'         shift, and go to state 49
    '&'         shift, and go to state 50
    '('         shift, and go to state 51
    '!'         shift, and go to state 52
    '~'         shift, and go to state 53
    '['         shift, and go to state 54
    '?'         shift, and go to state 5
    '@'         shift, and go to state 6

    $default  reduce using rule 277 (osimple_stmt)
